test/arrays/iterations/iterModConstArr2.good
iterModConstArr2.chpl:4: error: illegal lvalue in assignment
