test/arrays/iterations/iterModConstArr2.chpl
const A = [1.0, 2.0, 3.0];

forall a in A do
  a = -a;

writeln(A);
